// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginPage disabled form states renders CTA and browser settings warning when cookies are disabled, document is embedded inside iframe, and cross-origin cookies are allowed 1`] = `
<div
  class="css-1pqcqfr-kbnFullScreenBgCss"
  data-test-subj="loginForm"
>
  <header
    class="css-1uhsdzt-LoginPage"
  >
    <div
      class="css-145su9k-LoginPage-LoginPage"
    >
      <span
        class="loginWelcome__logo"
      >
        <span
          data-euiicon-type="logoElastic"
        />
      </span>
      <h1
        class="euiTitle loginWelcome__title emotion-euiTitle-m"
        data-test-subj="loginWelcomeTitle"
      >
        Welcome to Elastic
      </h1>
    </div>
  </header>
  <div
    class="css-145su9k-LoginPage-LoginPage"
  >
    <div
      class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-grow-1"
      >
        <div
          style="max-width: 36em; margin: auto; text-align: center;"
        >
          <div
            class="euiText emotion-euiText-m-euiTextColor-subdued"
          >
            <p>
              To view this content, open it in a new window or adjust your browser settings to allow third-party cookies.
            </p>
          </div>
          <div
            class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
          />
          <a
            class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-fill-primary"
            href="http://some-host/bar"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span
              class="emotion-euiButtonDisplayContent"
            >
              Open in new window
              <span
                color="inherit"
                data-euiicon-type="popout"
              />
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LoginPage disabled form states renders CTA and cross-origin cookie warning when cookies are disabled, document is embedded inside iframe, and cross-origin cookies are blocked 1`] = `
<div
  class="css-1pqcqfr-kbnFullScreenBgCss"
  data-test-subj="loginForm"
>
  <header
    class="css-1uhsdzt-LoginPage"
  >
    <div
      class="css-145su9k-LoginPage-LoginPage"
    >
      <span
        class="loginWelcome__logo"
      >
        <span
          data-euiicon-type="logoElastic"
        />
      </span>
      <h1
        class="euiTitle loginWelcome__title emotion-euiTitle-m"
        data-test-subj="loginWelcomeTitle"
      >
        Welcome to Elastic
      </h1>
    </div>
  </header>
  <div
    class="css-145su9k-LoginPage-LoginPage"
  >
    <div
      class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-grow-1"
      >
        <div
          style="max-width: 36em; margin: auto; text-align: center;"
        >
          <div
            class="euiText emotion-euiText-m-euiTextColor-subdued"
          >
            <p>
              To view this content, open it in a new window or ask your administrator to allow cross-origin cookies.
            </p>
          </div>
          <div
            class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
          />
          <a
            class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-fill-primary"
            href="http://some-host/bar"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span
              class="emotion-euiButtonDisplayContent"
            >
              Open in new window
              <span
                color="inherit"
                data-euiicon-type="popout"
              />
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LoginPage disabled form states renders as expected when a connection to ES is not available 1`] = `
<div
  class="css-1pqcqfr-kbnFullScreenBgCss"
  data-test-subj="loginForm"
>
  <header
    class="css-1uhsdzt-LoginPage"
  >
    <div
      class="css-145su9k-LoginPage-LoginPage"
    >
      <span
        class="loginWelcome__logo"
      >
        <span
          data-euiicon-type="logoElastic"
        />
      </span>
      <h1
        class="euiTitle loginWelcome__title emotion-euiTitle-m"
        data-test-subj="loginWelcomeTitle"
      >
        Welcome to Elastic
      </h1>
    </div>
  </header>
  <div
    class="css-145su9k-LoginPage-LoginPage"
  >
    <div
      class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-grow-1"
      >
        <div
          class="euiPanel euiPanel--plain euiPanel--paddingMedium emotion-euiPanel-grow-m-m-plain-hasShadow"
        >
          <div
            class="euiText emotion-euiText-m-euiTextColor-danger"
            style="text-align: center;"
          >
            <p>
              Cannot connect to the Elasticsearch cluster
            </p>
          </div>
          <div
            class="euiText emotion-euiText-m"
            style="text-align: center;"
          >
            <p>
              See the Kibana logs for details and try reloading the page.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LoginPage disabled form states renders as expected when an unknown loginState layout is provided 1`] = `
<div
  class="css-1pqcqfr-kbnFullScreenBgCss"
  data-test-subj="loginForm"
>
  <header
    class="css-1uhsdzt-LoginPage"
  >
    <div
      class="css-145su9k-LoginPage-LoginPage"
    >
      <span
        class="loginWelcome__logo"
      >
        <span
          data-euiicon-type="logoElastic"
        />
      </span>
      <h1
        class="euiTitle loginWelcome__title emotion-euiTitle-m"
        data-test-subj="loginWelcomeTitle"
      >
        Welcome to Elastic
      </h1>
    </div>
  </header>
  <div
    class="css-145su9k-LoginPage-LoginPage"
  >
    <div
      class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-grow-1"
      >
        <div
          class="euiPanel euiPanel--plain euiPanel--paddingMedium emotion-euiPanel-grow-m-m-plain-hasShadow"
        >
          <div
            class="euiText emotion-euiText-m-euiTextColor-danger"
            style="text-align: center;"
          >
            <p>
              Unsupported login form layout.
            </p>
          </div>
          <div
            class="euiText emotion-euiText-m"
            style="text-align: center;"
          >
            <p>
              See the Kibana logs for details and try reloading the page.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LoginPage disabled form states renders as expected when login is not enabled 1`] = `
<div
  class="css-1pqcqfr-kbnFullScreenBgCss"
  data-test-subj="loginForm"
>
  <header
    class="css-1uhsdzt-LoginPage"
  >
    <div
      class="css-das9jl-LoginPage"
    >
      <span
        class="loginWelcome__logo"
      >
        <span
          data-euiicon-type="logoElastic"
        />
      </span>
      <h1
        class="euiTitle loginWelcome__title emotion-euiTitle-m"
        data-test-subj="loginWelcomeTitle"
      >
        Welcome to Elastic
      </h1>
    </div>
  </header>
  <div
    class="css-das9jl-LoginPage"
  >
    <div
      class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-grow-1"
      >
        <div
          class="euiPanel euiPanel--plain euiPanel--paddingMedium emotion-euiPanel-grow-m-m-plain-hasShadow"
        >
          <div
            class="euiText emotion-euiText-m-euiTextColor-danger"
            style="text-align: center;"
          >
            <p>
              Login is disabled.
            </p>
          </div>
          <div
            class="euiText emotion-euiText-m"
            style="text-align: center;"
          >
            <p>
              Contact your system administrator.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LoginPage disabled form states renders as expected when secure connection is required but not present 1`] = `
<div
  class="css-1pqcqfr-kbnFullScreenBgCss"
  data-test-subj="loginForm"
>
  <header
    class="css-1uhsdzt-LoginPage"
  >
    <div
      class="css-145su9k-LoginPage-LoginPage"
    >
      <span
        class="loginWelcome__logo"
      >
        <span
          data-euiicon-type="logoElastic"
        />
      </span>
      <h1
        class="euiTitle loginWelcome__title emotion-euiTitle-m"
        data-test-subj="loginWelcomeTitle"
      >
        Welcome to Elastic
      </h1>
    </div>
  </header>
  <div
    class="css-145su9k-LoginPage-LoginPage"
  >
    <div
      class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-grow-1"
      >
        <div
          class="euiPanel euiPanel--plain euiPanel--paddingMedium emotion-euiPanel-grow-m-m-plain-hasShadow"
        >
          <div
            class="euiText emotion-euiText-m-euiTextColor-danger"
            style="text-align: center;"
          >
            <p>
              A secure connection is required for log in
            </p>
          </div>
          <div
            class="euiText emotion-euiText-m"
            style="text-align: center;"
          >
            <p>
              Contact your system administrator.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LoginPage disabled form states renders as expected when xpack is not available 1`] = `
<div
  class="css-1pqcqfr-kbnFullScreenBgCss"
  data-test-subj="loginForm"
>
  <header
    class="css-1uhsdzt-LoginPage"
  >
    <div
      class="css-145su9k-LoginPage-LoginPage"
    >
      <span
        class="loginWelcome__logo"
      >
        <span
          data-euiicon-type="logoElastic"
        />
      </span>
      <h1
        class="euiTitle loginWelcome__title emotion-euiTitle-m"
        data-test-subj="loginWelcomeTitle"
      >
        Welcome to Elastic
      </h1>
    </div>
  </header>
  <div
    class="css-145su9k-LoginPage-LoginPage"
  >
    <div
      class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-grow-1"
      >
        <div
          class="euiPanel euiPanel--plain euiPanel--paddingMedium emotion-euiPanel-grow-m-m-plain-hasShadow"
        >
          <div
            class="euiText emotion-euiText-m-euiTextColor-danger"
            style="text-align: center;"
          >
            <p>
              Cannot connect to the Elasticsearch cluster currently configured for Kibana.
            </p>
          </div>
          <div
            class="euiText emotion-euiText-m"
            style="text-align: center;"
          >
            <p>
              To use the full set of free features in this distribution of Kibana, please update Elasticsearch to the default distribution.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LoginPage disabled form states renders warning when cookies are disabled and document is not embedded inside iframe 1`] = `
<div
  class="css-1pqcqfr-kbnFullScreenBgCss"
  data-test-subj="loginForm"
>
  <header
    class="css-1uhsdzt-LoginPage"
  >
    <div
      class="css-145su9k-LoginPage-LoginPage"
    >
      <span
        class="loginWelcome__logo"
      >
        <span
          data-euiicon-type="logoElastic"
        />
      </span>
      <h1
        class="euiTitle loginWelcome__title emotion-euiTitle-m"
        data-test-subj="loginWelcomeTitle"
      >
        Welcome to Elastic
      </h1>
    </div>
  </header>
  <div
    class="css-145su9k-LoginPage-LoginPage"
  >
    <div
      class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-grow-1"
      >
        <div
          class="euiPanel euiPanel--plain euiPanel--paddingMedium emotion-euiPanel-grow-m-m-plain-hasShadow"
        >
          <div
            class="euiText emotion-euiText-m-euiTextColor-danger"
            style="text-align: center;"
          >
            <p>
              Cookies are required to log in to Elastic
            </p>
          </div>
          <div
            class="euiText emotion-euiText-m"
            style="text-align: center;"
          >
            <p>
              Enable cookies in your browser settings to continue.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LoginPage enabled form state renders as expected 1`] = `
<div
  class="css-1pqcqfr-kbnFullScreenBgCss"
  data-test-subj="loginForm"
>
  <header
    class="css-1uhsdzt-LoginPage"
  >
    <div
      class="css-das9jl-LoginPage"
    >
      <span
        class="loginWelcome__logo"
      >
        <span
          data-euiicon-type="logoElastic"
        />
      </span>
      <h1
        class="euiTitle loginWelcome__title emotion-euiTitle-m"
        data-test-subj="loginWelcomeTitle"
      >
        Welcome to Elastic
      </h1>
    </div>
  </header>
  <div
    class="css-das9jl-LoginPage"
  >
    <div
      class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-grow-1"
      >
        <div
          class="euiPanel euiPanel--transparent euiPanel--paddingMedium emotion-euiPanel-grow-m-m-transparent"
          data-test-subj="loginForm"
        >
          <form>
            <div
              class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow"
              id="generated-id-row"
            >
              <div
                class="euiFormRow__labelWrapper"
              >
                <label
                  aria-invalid="false"
                  class="euiFormLabel euiFormRow__label euiFormLabel-isFocused emotion-euiFormLabel"
                  for="generated-id"
                  id="generated-id-label"
                >
                  Username
                </label>
              </div>
              <div
                class="euiFormRow__fieldWrapper"
              >
                <div
                  class="euiFormControlLayout emotion-euiFormControlLayout"
                >
                  <div
                    class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
                  >
                    <input
                      aria-required="true"
                      autocomplete="off"
                      class="euiFieldText emotion-euiFieldText"
                      data-test-subj="loginUsername"
                      id="generated-id"
                      name="username"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow"
              id="generated-id-row"
            >
              <div
                class="euiFormRow__labelWrapper"
              >
                <label
                  aria-invalid="false"
                  class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
                  for="generated-id"
                  id="generated-id-label"
                >
                  Password
                </label>
              </div>
              <div
                class="euiFormRow__fieldWrapper"
              >
                <div
                  class="euiFormControlLayout euiFormControlLayout--group emotion-euiFormControlLayout-group"
                >
                  <div
                    class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper-inGroup"
                    style="--euiFormControlLeftIconsCount: 1;"
                  >
                    <div
                      class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-left"
                    >
                      <span
                        class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
                      >
                        <span
                          aria-hidden="true"
                          class="euiFormControlLayoutCustomIcon__icon"
                          data-euiicon-type="lock"
                        />
                      </span>
                    </div>
                    <input
                      aria-required="true"
                      autocomplete="off"
                      class="euiFieldPassword emotion-euiFieldPassword-inGroup-withToggle"
                      data-test-subj="loginPassword"
                      id="generated-id"
                      name="password"
                      type="password"
                      value=""
                    />
                  </div>
                  <div
                    class="euiFormControlLayout__append emotion-euiFormControlLayout__side"
                  >
                    <button
                      aria-label="Show password as plain text. Note: this will visually expose your password on the screen."
                      class="euiButtonIcon emotion-euiButtonIcon-xs-empty-primary"
                      title="Show password as plain text. Note: this will visually expose your password on the screen."
                      type="button"
                    >
                      <span
                        aria-hidden="true"
                        class="euiButtonIcon__icon"
                        color="inherit"
                        data-euiicon-type="eye"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
            />
            <div
              class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-center-row"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-grow-1"
              >
                <button
                  class="euiButton emotion-euiButtonDisplay-m-fullWidth-defaultMinWidth-fill-primary"
                  data-test-subj="loginSubmit"
                  type="submit"
                >
                  <span
                    class="emotion-euiButtonDisplayContent"
                  >
                    Log in
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LoginPage enabled form state renders as expected when loginAssistanceMessage is set 1`] = `
<div
  class="css-1pqcqfr-kbnFullScreenBgCss"
  data-test-subj="loginForm"
>
  <header
    class="css-1uhsdzt-LoginPage"
  >
    <div
      class="css-das9jl-LoginPage"
    >
      <span
        class="loginWelcome__logo"
      >
        <span
          data-euiicon-type="logoElastic"
        />
      </span>
      <h1
        class="euiTitle loginWelcome__title emotion-euiTitle-m"
        data-test-subj="loginWelcomeTitle"
      >
        Welcome to Elastic
      </h1>
    </div>
  </header>
  <div
    class="css-das9jl-LoginPage"
  >
    <div
      class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-grow-1"
      >
        <div
          class="css-tkrk4n-assistanceCss"
          data-test-subj="loginAssistanceMessage"
        >
          <hr
            class="euiHorizontalRule emotion-euiHorizontalRule-half-m"
          />
          <div
            class="euiText emotion-euiText-xs"
          >
            <p>
              This is an 
              <em>
                important
              </em>
               message
            </p>
          </div>
        </div>
        <div
          class="euiPanel euiPanel--transparent euiPanel--paddingMedium emotion-euiPanel-grow-m-m-transparent"
          data-test-subj="loginForm"
        >
          <form>
            <div
              class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow"
              id="generated-id-row"
            >
              <div
                class="euiFormRow__labelWrapper"
              >
                <label
                  aria-invalid="false"
                  class="euiFormLabel euiFormRow__label euiFormLabel-isFocused emotion-euiFormLabel"
                  for="generated-id"
                  id="generated-id-label"
                >
                  Username
                </label>
              </div>
              <div
                class="euiFormRow__fieldWrapper"
              >
                <div
                  class="euiFormControlLayout emotion-euiFormControlLayout"
                >
                  <div
                    class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
                  >
                    <input
                      aria-required="true"
                      autocomplete="off"
                      class="euiFieldText emotion-euiFieldText"
                      data-test-subj="loginUsername"
                      id="generated-id"
                      name="username"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow"
              id="generated-id-row"
            >
              <div
                class="euiFormRow__labelWrapper"
              >
                <label
                  aria-invalid="false"
                  class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
                  for="generated-id"
                  id="generated-id-label"
                >
                  Password
                </label>
              </div>
              <div
                class="euiFormRow__fieldWrapper"
              >
                <div
                  class="euiFormControlLayout euiFormControlLayout--group emotion-euiFormControlLayout-group"
                >
                  <div
                    class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper-inGroup"
                    style="--euiFormControlLeftIconsCount: 1;"
                  >
                    <div
                      class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-left"
                    >
                      <span
                        class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
                      >
                        <span
                          aria-hidden="true"
                          class="euiFormControlLayoutCustomIcon__icon"
                          data-euiicon-type="lock"
                        />
                      </span>
                    </div>
                    <input
                      aria-required="true"
                      autocomplete="off"
                      class="euiFieldPassword emotion-euiFieldPassword-inGroup-withToggle"
                      data-test-subj="loginPassword"
                      id="generated-id"
                      name="password"
                      type="password"
                      value=""
                    />
                  </div>
                  <div
                    class="euiFormControlLayout__append emotion-euiFormControlLayout__side"
                  >
                    <button
                      aria-label="Show password as plain text. Note: this will visually expose your password on the screen."
                      class="euiButtonIcon emotion-euiButtonIcon-xs-empty-primary"
                      title="Show password as plain text. Note: this will visually expose your password on the screen."
                      type="button"
                    >
                      <span
                        aria-hidden="true"
                        class="euiButtonIcon__icon"
                        color="inherit"
                        data-euiicon-type="eye"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
            />
            <div
              class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-center-row"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-grow-1"
              >
                <button
                  class="euiButton emotion-euiButtonDisplay-m-fullWidth-defaultMinWidth-fill-primary"
                  data-test-subj="loginSubmit"
                  type="submit"
                >
                  <span
                    class="emotion-euiButtonDisplayContent"
                  >
                    Log in
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LoginPage enabled form state renders as expected when loginHelp is set 1`] = `
<div
  class="css-1pqcqfr-kbnFullScreenBgCss"
  data-test-subj="loginForm"
>
  <header
    class="css-1uhsdzt-LoginPage"
  >
    <div
      class="css-das9jl-LoginPage"
    >
      <span
        class="loginWelcome__logo"
      >
        <span
          data-euiicon-type="logoElastic"
        />
      </span>
      <h1
        class="euiTitle loginWelcome__title emotion-euiTitle-m"
        data-test-subj="loginWelcomeTitle"
      >
        Welcome to Elastic
      </h1>
    </div>
  </header>
  <div
    class="css-das9jl-LoginPage"
  >
    <div
      class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-grow-1"
      >
        <div
          class="euiPanel euiPanel--transparent euiPanel--paddingMedium emotion-euiPanel-grow-m-m-transparent"
          data-test-subj="loginForm"
        >
          <form>
            <div
              class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow"
              id="generated-id-row"
            >
              <div
                class="euiFormRow__labelWrapper"
              >
                <label
                  aria-invalid="false"
                  class="euiFormLabel euiFormRow__label euiFormLabel-isFocused emotion-euiFormLabel"
                  for="generated-id"
                  id="generated-id-label"
                >
                  Username
                </label>
              </div>
              <div
                class="euiFormRow__fieldWrapper"
              >
                <div
                  class="euiFormControlLayout emotion-euiFormControlLayout"
                >
                  <div
                    class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
                  >
                    <input
                      aria-required="true"
                      autocomplete="off"
                      class="euiFieldText emotion-euiFieldText"
                      data-test-subj="loginUsername"
                      id="generated-id"
                      name="username"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow"
              id="generated-id-row"
            >
              <div
                class="euiFormRow__labelWrapper"
              >
                <label
                  aria-invalid="false"
                  class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
                  for="generated-id"
                  id="generated-id-label"
                >
                  Password
                </label>
              </div>
              <div
                class="euiFormRow__fieldWrapper"
              >
                <div
                  class="euiFormControlLayout euiFormControlLayout--group emotion-euiFormControlLayout-group"
                >
                  <div
                    class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper-inGroup"
                    style="--euiFormControlLeftIconsCount: 1;"
                  >
                    <div
                      class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-left"
                    >
                      <span
                        class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
                      >
                        <span
                          aria-hidden="true"
                          class="euiFormControlLayoutCustomIcon__icon"
                          data-euiicon-type="lock"
                        />
                      </span>
                    </div>
                    <input
                      aria-required="true"
                      autocomplete="off"
                      class="euiFieldPassword emotion-euiFieldPassword-inGroup-withToggle"
                      data-test-subj="loginPassword"
                      id="generated-id"
                      name="password"
                      type="password"
                      value=""
                    />
                  </div>
                  <div
                    class="euiFormControlLayout__append emotion-euiFormControlLayout__side"
                  >
                    <button
                      aria-label="Show password as plain text. Note: this will visually expose your password on the screen."
                      class="euiButtonIcon emotion-euiButtonIcon-xs-empty-primary"
                      title="Show password as plain text. Note: this will visually expose your password on the screen."
                      type="button"
                    >
                      <span
                        aria-hidden="true"
                        class="euiButtonIcon__icon"
                        color="inherit"
                        data-euiicon-type="eye"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
            />
            <div
              class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-center-row"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-grow-1"
              >
                <button
                  class="euiButton emotion-euiButtonDisplay-m-fullWidth-defaultMinWidth-fill-primary"
                  data-test-subj="loginSubmit"
                  type="submit"
                >
                  <span
                    class="emotion-euiButtonDisplayContent"
                  >
                    Log in
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
        <div
          class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
        />
        <div
          class="euiText eui-textCenter emotion-euiText-xs"
        >
          <button
            class="euiLink emotion-euiLink-primary"
            data-test-subj="loginHelpLink"
            type="button"
          >
            Need help?
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LoginPage page renders as expected 1`] = `
<div
  class="css-1pqcqfr-kbnFullScreenBgCss"
  data-test-subj="loginForm"
>
  <header
    class="css-1uhsdzt-LoginPage"
  >
    <div
      class="css-das9jl-LoginPage"
    >
      <span
        class="loginWelcome__logo"
      >
        <span
          data-euiicon-type="logoElastic"
        />
      </span>
      <h1
        class="euiTitle loginWelcome__title emotion-euiTitle-m"
        data-test-subj="loginWelcomeTitle"
      >
        Welcome to Elastic
      </h1>
    </div>
  </header>
  <div
    class="css-das9jl-LoginPage"
  >
    <div
      class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-grow-1"
      >
        <div
          class="euiPanel euiPanel--transparent euiPanel--paddingMedium emotion-euiPanel-grow-m-m-transparent"
          data-test-subj="loginForm"
        >
          <form>
            <div
              class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow"
              id="generated-id-row"
            >
              <div
                class="euiFormRow__labelWrapper"
              >
                <label
                  aria-invalid="false"
                  class="euiFormLabel euiFormRow__label euiFormLabel-isFocused emotion-euiFormLabel"
                  for="generated-id"
                  id="generated-id-label"
                >
                  Username
                </label>
              </div>
              <div
                class="euiFormRow__fieldWrapper"
              >
                <div
                  class="euiFormControlLayout emotion-euiFormControlLayout"
                >
                  <div
                    class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
                  >
                    <input
                      aria-required="true"
                      autocomplete="off"
                      class="euiFieldText emotion-euiFieldText"
                      data-test-subj="loginUsername"
                      id="generated-id"
                      name="username"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow"
              id="generated-id-row"
            >
              <div
                class="euiFormRow__labelWrapper"
              >
                <label
                  aria-invalid="false"
                  class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
                  for="generated-id"
                  id="generated-id-label"
                >
                  Password
                </label>
              </div>
              <div
                class="euiFormRow__fieldWrapper"
              >
                <div
                  class="euiFormControlLayout euiFormControlLayout--group emotion-euiFormControlLayout-group"
                >
                  <div
                    class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper-inGroup"
                    style="--euiFormControlLeftIconsCount: 1;"
                  >
                    <div
                      class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-left"
                    >
                      <span
                        class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
                      >
                        <span
                          aria-hidden="true"
                          class="euiFormControlLayoutCustomIcon__icon"
                          data-euiicon-type="lock"
                        />
                      </span>
                    </div>
                    <input
                      aria-required="true"
                      autocomplete="off"
                      class="euiFieldPassword emotion-euiFieldPassword-inGroup-withToggle"
                      data-test-subj="loginPassword"
                      id="generated-id"
                      name="password"
                      type="password"
                      value=""
                    />
                  </div>
                  <div
                    class="euiFormControlLayout__append emotion-euiFormControlLayout__side"
                  >
                    <button
                      aria-label="Show password as plain text. Note: this will visually expose your password on the screen."
                      class="euiButtonIcon emotion-euiButtonIcon-xs-empty-primary"
                      title="Show password as plain text. Note: this will visually expose your password on the screen."
                      type="button"
                    >
                      <span
                        aria-hidden="true"
                        class="euiButtonIcon__icon"
                        color="inherit"
                        data-euiicon-type="eye"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
            />
            <div
              class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-center-row"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-grow-1"
              >
                <button
                  class="euiButton emotion-euiButtonDisplay-m-fullWidth-defaultMinWidth-fill-primary"
                  data-test-subj="loginSubmit"
                  type="submit"
                >
                  <span
                    class="emotion-euiButtonDisplayContent"
                  >
                    Log in
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LoginPage page renders with custom branding 1`] = `
<div
  class="css-1pqcqfr-kbnFullScreenBgCss"
  data-test-subj="loginForm"
>
  <header
    class="css-1uhsdzt-LoginPage"
  >
    <div
      class="css-das9jl-LoginPage"
    >
      <span
        class="loginWelcome__logo"
        style="padding: 0px;"
      >
        <figure
          class="euiImageWrapper emotion-euiImageWrapper"
        >
          <img
            alt="logo"
            class="euiImage emotion-euiImage-customSize"
            src="logo"
            style="max-width: 40px; max-height: 40px;"
          />
        </figure>
      </span>
      <h1
        class="euiTitle loginWelcome__title emotion-euiTitle-m"
        data-test-subj="loginWelcomeTitle"
      >
        Welcome to Elastic
      </h1>
    </div>
  </header>
  <div
    class="css-das9jl-LoginPage"
  >
    <div
      class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-grow-1"
      >
        <div
          class="euiPanel euiPanel--transparent euiPanel--paddingMedium emotion-euiPanel-grow-m-m-transparent"
          data-test-subj="loginForm"
        >
          <form>
            <div
              class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow"
              id="generated-id-row"
            >
              <div
                class="euiFormRow__labelWrapper"
              >
                <label
                  aria-invalid="false"
                  class="euiFormLabel euiFormRow__label euiFormLabel-isFocused emotion-euiFormLabel"
                  for="generated-id"
                  id="generated-id-label"
                >
                  Username
                </label>
              </div>
              <div
                class="euiFormRow__fieldWrapper"
              >
                <div
                  class="euiFormControlLayout emotion-euiFormControlLayout"
                >
                  <div
                    class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
                  >
                    <input
                      aria-required="true"
                      autocomplete="off"
                      class="euiFieldText emotion-euiFieldText"
                      data-test-subj="loginUsername"
                      id="generated-id"
                      name="username"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow"
              id="generated-id-row"
            >
              <div
                class="euiFormRow__labelWrapper"
              >
                <label
                  aria-invalid="false"
                  class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
                  for="generated-id"
                  id="generated-id-label"
                >
                  Password
                </label>
              </div>
              <div
                class="euiFormRow__fieldWrapper"
              >
                <div
                  class="euiFormControlLayout euiFormControlLayout--group emotion-euiFormControlLayout-group"
                >
                  <div
                    class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper-inGroup"
                    style="--euiFormControlLeftIconsCount: 1;"
                  >
                    <div
                      class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-left"
                    >
                      <span
                        class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
                      >
                        <span
                          aria-hidden="true"
                          class="euiFormControlLayoutCustomIcon__icon"
                          data-euiicon-type="lock"
                        />
                      </span>
                    </div>
                    <input
                      aria-required="true"
                      autocomplete="off"
                      class="euiFieldPassword emotion-euiFieldPassword-inGroup-withToggle"
                      data-test-subj="loginPassword"
                      id="generated-id"
                      name="password"
                      type="password"
                      value=""
                    />
                  </div>
                  <div
                    class="euiFormControlLayout__append emotion-euiFormControlLayout__side"
                  >
                    <button
                      aria-label="Show password as plain text. Note: this will visually expose your password on the screen."
                      class="euiButtonIcon emotion-euiButtonIcon-xs-empty-primary"
                      title="Show password as plain text. Note: this will visually expose your password on the screen."
                      type="button"
                    >
                      <span
                        aria-hidden="true"
                        class="euiButtonIcon__icon"
                        color="inherit"
                        data-euiicon-type="eye"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
            />
            <div
              class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-center-row"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-grow-1"
              >
                <button
                  class="euiButton emotion-euiButtonDisplay-m-fullWidth-defaultMinWidth-fill-primary"
                  data-test-subj="loginSubmit"
                  type="submit"
                >
                  <span
                    class="emotion-euiButtonDisplayContent"
                  >
                    Log in
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;
